correcting jenkins playbook

--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -12,7 +12,7 @@
     description: jenkins repository
     baseurl: http://pkg.jenkins.io/redhat
     enabled: no
-    gpgcheck yes
+    gpgcheck: yes
 
 - name: Install Jenkins
   yum:
