--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -4,13 +4,13 @@
 - name: Import Jenkins GPG key
   rpm_key:
     state: present
-    key: http://pkg.jenkins-ci.org/redhat/jenkins-ci.org.key
+    key: https://pkg.jenkins.io/redhat/jenkins.io.key
 
 - name: Add Jenkins repository
   yum_repository:
     name: jenkins
     description: jenkins repository
-    baseurl: http://pkg.jenkins.io/redhat
+    baseurl: https://pkg.jenkins.io/redhat/jenkins.repo
     enabled: no
     gpgcheck: yes
 
